<resources>
    <string name="app_name">SIM Sekolah</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="nomor_id_card">Nomor ID Card</string>
    <string name="id_card">Id Card</string>
    <string name="no_induk">No Induk</string>
    <string name="name">Name</string>
    <string-array name="level">
        <item>Pilih level</item>
        <item>Siswa</item>
        <item>Guru</item>
    </string-array>
</resources>